# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  g  pyproject.toml  run
.github/workflows/: pyci.yml
gendiff/: __init__.py  makediff.py  parse_file.py
gendiff/formatters/: plain.py  stylish.py  test.txt  work_with_bool.py
gendiff/scripts/: gendiff.py
python-project-50/: Makefile  README.md
tests/: test_gendiff.py
tests/fixtures/: expect_file1_file2_json.json
