[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ivan S <Zridq@yandex.ru>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
poetry = "^1.1.8"
requests = "^2.26.0"
pytest = "^8.1.0"
crashtest = "0.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

pyyaml = "^6.0.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
